Adding TOON standard support